fix overflow and null on pressing = more than once

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
     color: #212529;
     margin-bottom: 5px;
     min-height: 48px;
+    overflow: auto;
   }
 
   .previous-operand {
